--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/lib/QGumboParser"]
-	path = src/lib/QGumboParser
+	path = thirdparty/QGumboParser
 	url = https://github.com/lagner/QGumboParser
