--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ addons:
     packages:
     - qt5-default
     - qtbase5-dev-tools
+    - libqt5quick5
     - libtinyxml2-dev
   homebrew:
     update: true
