--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
         run: sudo apt-get install cmake tinyxml2-dev
         
       - name: Checkout Git
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
         with:
           submodules: true
       
@@ -19,7 +19,7 @@ jobs:
         run: mkdir build && cd build
       
       - name: Run CMake
-      - run: cmake .. -G "Unix Makefiles"
+        run: cmake .. -G "Unix Makefiles"
       
       - name: Make
         run: make -j$(nproc)
