--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,8 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      - COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
     steps:
       - name: Get Qt
         uses: jurplel/install-qt-action@v2
@@ -19,10 +21,10 @@ jobs:
         run: mkdir build
       
       - name: Run CMake
-        run: cd build && cmake .. -G "Unix Makefiles"
+        run: cd build && cmake .. -DCMAKE_BUILD_TYPE=Debug -G "Unix Makefiles" -DCOVERALLS=ON
       
       - name: Make
         run: cd build && make -j$(nproc)
       
-      - name: Make Test
-        run: cd build && make test
+      - name: Generate Coverage
+        run: cd build && make coveralls
