Updated travis config

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.organization=rophil
-sonar.projectKey=qytlib
+sonar.projectKey=PhilInTheGaps_qytlib
+sonar.projectName=qytlib
 sonar.host.url=https://sonarcloud.io
 
 sonar.sources=src
