--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,8 +3,15 @@ sonar.projectKey=PhilInTheGaps_qytlib
 sonar.projectName=qytlib
 sonar.host.url=https://sonarcloud.io
 
+sonar.links.homepage=https://github.com/PhilInTheGaps/qytlib
+sonar.links.ci=https://travis-ci.com/github/PhilInTheGaps/qytlib
+sonar.links.scm=https://github.com/PhilInTheGaps/qytlib
+sonar.links.issue=https://github.com/PhilInTheGaps/qytlib/issues
+
 sonar.sources=src
 sonar.tests=tests
-sonar.cxx.includeDirectories=inc,/usr/include
+sonar.cxx.includeDirectories=include,/usr/include
 
+sonar.cfamily.threads=2
 sonar.cfamily.build-wrapper-output=bw-output
+sonar.cfamily.gcov.reportsPath=build
