--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,10 @@ jobs:
         run: mkdir build
       
       - name: Run CMake
-        run: cd build && cmake .. -DCMAKE_BUILD_TYPE=Debug -G "Unix Makefiles" -DCOVERALLS=ON
+        run: cd build && cmake .. -G "Unix Makefiles"
       
       - name: Make
         run: cd build && make -j$(nproc)
       
-      - name: Generate Coverage
-        run: cd build && make coveralls
+      - name: Tests
+        run: cd build && make test
