--- a/tests/videos/CMakeLists.txt
+++ b/tests/videos/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_subdirectory(test_videoid)
 add_subdirectory(test_videoclient)
 add_subdirectory(test_closedcaptionclient)
+add_subdirectory(test_streamsclient)
