--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
           args: install cmake openssl
           
       - name: Print software versions
-        run: cmake --version && g++ --version && ming32-make --version
+        run: cmake --version && g++ --version && mingw32-make --version
 
       - name: Checkout Git
         uses: actions/checkout@v2
