--- a/tests/channels/test_channelid/CMakeLists.txt
+++ b/tests/channels/test_channelid/CMakeLists.txt
@@ -2,5 +2,5 @@ find_package(Qt5Test REQUIRED)
 
 add_executable(test_channelid tst_channelid.h tst_channelid.cpp)
 target_include_directories(test_channelid PRIVATE ${CMAKE_SOURCE_DIR}/src)
-target_link_libraries(test_channelid qytlib Qt5::Test)
+target_link_libraries(test_channelid qyt Qt5::Test)
 add_test(NAME test_channelid COMMAND test_channelid)
