--- a/tests/channels/test_username/CMakeLists.txt
+++ b/tests/channels/test_username/CMakeLists.txt
@@ -2,5 +2,5 @@ find_package(Qt5Test REQUIRED)
 
 add_executable(test_username tst_username.h tst_username.cpp)
 target_include_directories(test_username PRIVATE ${CMAKE_SOURCE_DIR}/src)
-target_link_libraries(test_username qytlib Qt5::Test)
+target_link_libraries(test_username qyt Qt5::Test)
 add_test(NAME test_username COMMAND test_username)
