--- a/tests/utils/test_urlutils/CMakeLists.txt
+++ b/tests/utils/test_urlutils/CMakeLists.txt
@@ -2,5 +2,5 @@ find_package(Qt5Test REQUIRED)
 
 add_executable(test_urlutils tst_urlutils.h tst_urlutils.cpp)
 target_include_directories(test_urlutils PRIVATE ${CMAKE_SOURCE_DIR}/src)
-target_link_libraries(test_urlutils qytlib Qt5::Test)
+target_link_libraries(test_urlutils qyt Qt5::Test)
 add_test(NAME test_urlutils COMMAND test_urlutils)
